--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,9 @@ crispy-bootstrap5==2024.10
 Django==5.1.2
 django-allauth==65.0.2
 django-crispy-forms==2.3
+gunicorn==23.0.0
+pillow==11.0.0
 pytz==2024.2
 setuptools==58.0.0
 sqlparse==0.5.1
+whitenoise==6.7.0
