--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ dj-database-url==2.3.0
 dj3-cloudinary-storage==0.0.6
 Django==5.1.2
 django-allauth==65.0.2
+django-countries==7.6.1
 django-crispy-forms==2.3
 gunicorn==23.0.0
 pillow==11.0.0
