--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ django-allauth==65.0.2
 django-countries==7.6.1
 django-crispy-forms==2.3
 gunicorn==23.0.0
+mock==5.1.0
 pillow==11.0.0
 psycopg2==2.9.10
 pytz==2024.2
